fix: Updates after merging in changes from "master"